--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -85,218 +85,94 @@ padding-top: 10px;
 
 
 
-
-body {
-    background: #f2f2f2;
-  width: 100%;
-  height: 100%;
-  margin: 0;
-  padding: 95px 0;
-  font-family: 'Source Sans Pro', sans-serif;
-  font-weight: 200;
-}
-
-.row-no-gutter {
-  margin-right: 0;
-  margin-left: 0;
-}
-
-.row-no-gutter [class*="col-"] {
-  padding-right: 0;
-  padding-left: 0;
-}
-
-
-#card {
-  background: #fff;
-  position: relative;
-
-  -webkit-box-shadow: 0px 1px 10px 0px rgba(207,207,207,1);
-  -moz-box-shadow: 0px 1px 10px 0px rgba(207,207,207,1);
-  box-shadow: 0px 1px 10px 0px rgba(207,207,207,1);
-
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;  
-}
-
-.city-selected {
-  position: relative;
-  overflow: hidden;
-  min-height: 200px;
-  background: #3D6AA2;
-}
-
-article {
-  position: relative;
-  z-index: 2;
-  color: #fff;
-  padding: 20px;
-
-  display: -ms-flexbox;
-  display: -webkit-flex;
-  display: flex;
-  -webkit-flex-direction: row;
-  -ms-flex-direction: row;
-  flex-direction: row;
-  -webkit-flex-wrap: wrap;
-  -ms-flex-wrap: wrap;
-  flex-wrap: wrap;
-  -webkit-justify-content: space-between;
-  -ms-flex-pack: justify;
-  justify-content: space-between;
-  -webkit-align-content: flex-start;
-  -ms-flex-line-pack: start;
-  align-content: flex-start;
-  -webkit-align-items: flex-start;
-  -ms-flex-align: start;
-  align-items: flex-start;
-}
-
-.info .city,
-.night {
-  font-size: 24px;
-  font-weight: 200;
-  position: relative;
-
-
-  -webkit-order: 0;
-  -ms-flex-order: 0;
-  order: 0;
-  -webkit-flex: 0 1 auto;
-  -ms-flex: 0 1 auto;
-  flex: 0 1 auto;
-  -webkit-align-self: auto;
-  -ms-flex-item-align: auto;
-  align-self: auto;
-}
-
-.info .city:after {
-  content: '';
-  width: 15px;
-  height: 2px;
-  background: #fff;
-  position: relative;
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: 10px;
-}
-
-.city span {
-  color: #fff;
-  font-size: 13px;
-  font-weight: bold;
-
-  text-transform: lowercase;
-  text-align: left;
-}
-
-.night {
-  font-size: 15px;
-  text-transform: uppercase;
-}
-
-.icon {
-  width: 84px;
-  height: 84px;
-  -webkit-order: 0;
-  -ms-flex-order: 0;
-  order: 0;
-  -webkit-flex: 0 0 auto;
-  -ms-flex: 0 0 auto;
-  flex: 0 0 auto;
-  -webkit-align-self: center;
-  -ms-flex-item-align: center;
-  align-self: center;
-
-  overflow: visible;
-
-}
-
-
-.temp {
-  font-size: 73px;
-  display: block;
-  position: relative;
-  font-weight: bold;
-}
-
-svg {
-  color: #fff;
-  fill: currentColor;
-}
-
-
-.wind svg {
-  width: 18px;
-  height: 18px;
-  margin-top: 20px;
-  margin-right: 10px;
-  vertical-align: bottom;
-}
-
-.wind span {
-  font-size: 13px;
-  text-transform: uppercase;
-}
-
-.city-selected:hover figure {
-  opacity: 0.4;
-}
-
-
-figure {
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    left: 0;
-    top: 0;
-    background-position: center;
-    background-size: cover;
-    opacity: 0.1;
-    z-index: 1;
-
-    -webkit-transition: all 0.5s ease;
-    -moz-transition: all 0.5s ease;
-    -ms-transition: all 0.5s ease;
-    -o-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-}
-
-.days .row [class*="col-"]:nth-child(2) .day  {
-    border-width: 0 1px 0 1px;
-    border-style: solid;
-    border-color: #eaeaea;
-}
-
-.days .row [class*="col-"] {
-  -webkit-transition: all 0.5s ease;
-  -moz-transition: all 0.5s ease;
-  -ms-transition: all 0.5s ease;
-  -o-transition: all 0.5s ease;
-  transition: all 0.5s ease;  
-}
-
-.days .row [class*="col-"]:hover{
-  background: #eaeaea;
-}
-
-.day {
-  padding: 10px 0px;
+#weather {
+  width: 500px;
+  margin: 0px auto;
   text-align: center;
-
-}
-
-.day h1 {
-  font-size: 14px;
   text-transform: uppercase;
-  margin-top: 10px;
 }
 
-.day svg {
-  color: #000;
-  width: 32px;
-  height: 32px;
+i {
+  color: #fff;
+  font-family: weather;
+  font-size: 150px;
+  font-weight: normal;
+  font-style: normal;
+  line-height: 1.0;
+  text-transform: none;
+}
+
+.icon-0:before { content: ":"; }
+.icon-1:before { content: "p"; }
+.icon-2:before { content: "S"; }
+.icon-3:before { content: "Q"; }
+.icon-4:before { content: "S"; }
+.icon-5:before { content: "W"; }
+.icon-6:before { content: "W"; }
+.icon-7:before { content: "W"; }
+.icon-8:before { content: "W"; }
+.icon-9:before { content: "I"; }
+.icon-10:before { content: "W"; }
+.icon-11:before { content: "I"; }
+.icon-12:before { content: "I"; }
+.icon-13:before { content: "I"; }
+.icon-14:before { content: "I"; }
+.icon-15:before { content: "W"; }
+.icon-16:before { content: "I"; }
+.icon-17:before { content: "W"; }
+.icon-18:before { content: "U"; }
+.icon-19:before { content: "Z"; }
+.icon-20:before { content: "Z"; }
+.icon-21:before { content: "Z"; }
+.icon-22:before { content: "Z"; }
+.icon-23:before { content: "Z"; }
+.icon-24:before { content: "E"; }
+.icon-25:before { content: "E"; }
+.icon-26:before { content: "3"; }
+.icon-27:before { content: "a"; }
+.icon-28:before { content: "A"; }
+.icon-29:before { content: "a"; }
+.icon-30:before { content: "A"; }
+.icon-31:before { content: "6"; }
+.icon-32:before { content: "1"; }
+.icon-33:before { content: "6"; }
+.icon-34:before { content: "1"; }
+.icon-35:before { content: "W"; }
+.icon-36:before { content: "1"; }
+.icon-37:before { content: "S"; }
+.icon-38:before { content: "S"; }
+.icon-39:before { content: "S"; }
+.icon-40:before { content: "M"; }
+.icon-41:before { content: "W"; }
+.icon-42:before { content: "I"; }
+.icon-43:before { content: "W"; }
+.icon-44:before { content: "a"; }
+.icon-45:before { content: "S"; }
+.icon-46:before { content: "U"; }
+.icon-47:before { content: "S"; }
+
+#weather h2 {
+  margin: 0 0 8px;
+  color: #fff;
+  font-size: 100px;
+  font-weight: 300;
+  text-align: center;
+  text-shadow: 0px 1px 3px rgba(0, 0, 0, 0.15);
+}
+
+#weather ul {
+  margin: 0;
+  padding: 0;
+}
+
+#weather li {
+  background: #fff;
+  background: rgba(255,255,255,0.90);
+  padding: 20px;
+  display: inline-block;
+  border-radius: 5px;
+}
+
+#weather .currently {
+  margin: 0 20px;
 }
