--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -1,4 +1,6 @@
-
+.search{
+  
+}
   
 .logo2 {
 
@@ -421,23 +423,25 @@ a.socialIcon:hover, .socialHoverClass {
             }
 
 .timeline-badge.primary {
-    background-color: #2e6da4 !important;
+    background-color: #ce0000!important;
+
 }
 
 .timeline-badge.success {
-    background-color: #3f903f !important;
+    background-color: #ce0000 !important;
 }
 
 .timeline-badge.warning {
-    background-color: #f0ad4e !important;
+    background-color: #ce0000 !important;
+
 }
 
 .timeline-badge.danger {
-    background-color: #d9534f !important;
+    background-color: #ce0000!important;
 }
 
 .timeline-badge.info {
-    background-color: #5bc0de !important;
+    background-color: #ce0000!important;
 }
 
 .timeline-title {
