--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -76,7 +76,14 @@ section {
   background: url("../pv.jpg") no-repeat center;
   width: 100%;
   height: 100vh;
+
 }
+.fullhotels {
+  background: url("../images/puertovallarta.jpg") no-repeat center;
+  width: 100%;
+  height: 100vh;
+}
+
 .full2 {
 
 width: 100%;
