--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -2,6 +2,16 @@
 color: white;
 font-weight: bold;;
 }
+.centerimage {
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+        max-width: 100%;
+    max-height: 100%;
+}
 .center-div
 {
   margin: 0 auto;
