--- a/public/css/mycss.css
+++ b/public/css/mycss.css
@@ -1,6 +1,21 @@
 .white{
 color: white;
-font-weight: bold;;
+font-weight: bold;
+
+}
+.pad{
+  padding-top: 400px;
+
+}
+.padmobile{
+  padding-top: 120px;
+
+     
+}
+.text {
+color: black;
+font-weight: lighter;
+
 }
 .centerimage {
     position: absolute;
@@ -298,22 +313,22 @@ ul.social-network li {
 
 
 /* footer social icons */
-.social-network a.icoRss:hover {
+.social-network a.icoRss {
   background-color: #F56505;
 }
-.social-network a.icoFacebook:hover {
+.social-network a.icoFacebook {
   background-color:#3B5998;
 }
-.social-network a.icoTwitter:hover {
+.social-network a.icoTwitter {
   background-color:#33ccff;
 }
-.social-network a.icoGoogle:hover {
+.social-network a.icoGoogle {
   background-color:#BD3518;
 }
-.social-network a.icoVimeo:hover {
+.social-network a.icoVimeo {
   background-color:#0590B8;
 }
-.social-network a.icoLinkedin:hover {
+.social-network a.icoLinkedin {
   background-color:#007bb7;
 }
 .social-network a.icoRss:hover i, .social-network a.icoFacebook:hover i, .social-network a.icoTwitter:hover i,
